--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,6 @@ android.enableJetifier=true
 ISLOCAL=false
 JAR_PREFIX=aria-
 JAR_POSTFIX=core
+
+SNAPSHOT_REPOSITORY_URL=https://repo.rdc.aliyun.com/repository/127759-snapshot-6IdGHp
+RELEASE_REPOSITORY_URL=https://repo.rdc.aliyun.com/repository/127759-release-xIYXSO
